# auto_cycle_count

./: .dockerignore  .env  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  TRAINING_GUIDE.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  InspectionPage.tsx  TrainingPage.tsx  api.ts  styles.css  types.ts
demo/models/: empty-cell-head.safetensors  rf-detr-seg-small-totes.pth
demo/models/dinov2-vits14/: config.json  model.safetensors
scripts/: build.ps1  start.ps1  train_empty_cell_head.py  train_patch_anomaly_detector.py  train_rfdetr.py
tests/: test_api.py  test_config.py  test_decision_engine.py  test_dinov2_adapter.py  test_geometry_validator.py  test_image_resolver.py  test_inspect_empty_tote.py  test_rfdetr_adapters.py  test_training_dataset.py  test_training_geometry_prediction.py
tote_vision/: __init__.py  bootstrap.py  config.py  main.py
tote_vision/adapters/: __init__.py  dinov2.py  grounding_dino.py  image_resolver.py  local_artifacts.py  patch_anomaly.py  rfdetr.py  training_dataset.py
tote_vision/api/: __init__.py  dashboard_routes.py  routes.py  schemas.py  training_routes.py  training_schemas.py
tote_vision/application/: __init__.py  inspect_empty_tote.py  predict_training_geometry.py
tote_vision/core/: __init__.py  decision.py  geometry.py  models.py  ports.py  training_models.py
