[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tote-vision"
version = "0.1.0"
description = "Phase 1 empty-tote inspection service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "pillow>=11,<13",
    "python-multipart>=0.0.20,<1",
    "pydantic-settings>=2.7,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.11,<1",
]
vision = [
    "albumentations>=1.4,<3",
    "numpy>=2.1,<3",
    "opencv-python-headless>=4.10,<5",
    "rfdetr[train,loggers]>=1.4,<2",
    "safetensors>=0.5,<1",
    "torch>=2.5,<2.8",
    "transformers>=4.48,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["tote_vision"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
